...
            selected: "chart.line.uptrend.xyaxis",
          }}
          md="trending_up"
        />
      </NativeTabs.Trigger>
      <NativeTabs.Trigger name="mypage">
        <NativeTabs.Trigger.Label>마이</NativeTabs.Trigger.Label>
        <NativeTabs.Trigger.Icon sf={{ default: "person", selected: "person.fill" }} md="person" />
      </NativeTabs.Trigger>
    </NativeTabs>
  );
};

...
