appId: com.cyjoon.dailyfundingmobile
---
- launchApp:
    clearState: true
- runFlow:
    when:
      visible:
        text: Fetch development servers
    commands:
      - openLink: "dailyfunding://expo-development-client/?url=http%3A%2F%2F10.0.2.2%3A8081"
- runFlow:
    when:
      visible:
        text: Continue
    commands:
      - tapOn:
          text: Continue
- runFlow:
    when:
      visible:
        text: Open DevTools|Toggle performance monitor
    commands:
      - back
- extendedWaitUntil:
    visible:
      text: 가입하기
    timeout: 30000
- tapOn:
    text: 가입하기
    index: 0
- runFlow:
    when:
      visible:
        text: Dismiss
    commands:
      - tapOn:
          text: Dismiss
- extendedWaitUntil:
    visible:
      text: 어떤 회원으로 가입할까요?
    timeout: 30000
- tapOn:
    text: 법인 사업자등록증이 필요해요
- extendedWaitUntil:
    visible:
      text: 계정 정보
    timeout: 30000
- assertNotVisible:
    text: 이미 계정이 있어요
- tapOn:
    text: "^이메일$"
- inputText: corp20@test.com
- hideKeyboard
- tapOn:
    text: "^비밀번호$"
- inputText: Test1234!
- hideKeyboard
- tapOn:
    text: 비밀번호 확인
- inputText: Test1234!
- hideKeyboard
- tapOn:
    text: 모두 동의해요
- tapOn:
    text: "^다음$"
- extendedWaitUntil:
    visible:
      text: 사업자등록번호
    timeout: 15000
- tapOn:
    text: "^이름$"
- inputText: 법인담당
- hideKeyboard
- tapOn:
    text: 생년월일
- inputText: "19850320"
- hideKeyboard
- tapOn:
    text: "^휴대폰 번호$"
- inputText: "01055556620"
- hideKeyboard
- tapOn:
    text: 사업자등록번호
- inputText: "2208123420"
- hideKeyboard
- tapOn:
    text: 인증하고 가입하기
- extendedWaitUntil:
    visible:
      text: 가입이 완료됐어요
    timeout: 30000
- assertNotVisible:
    text: 간편비밀번호 등록하기
